feat: update contacts section

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h1 {
 }
 
 .title-text {
-  width: 600px;
+  width: 745px;
 }
 
 .aside {
@@ -64,7 +64,6 @@ h1 {
 }
 
 .aside {
-  background-color: #e5e5e5;
   padding: 0 10px;
 }
 
@@ -80,7 +79,7 @@ li {
 
 .contacts-wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   font-size: 14px;
 }
