feat: update cv with nodejs project
 add linkedin link

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h1 {
 }
 
 .title-text {
-  width: 745px;
+  width: 800px;
 }
 
 .aside {
@@ -80,7 +80,7 @@ li {
 
 .contacts-wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 0.8fr 0.8fr 1fr;
   grid-template-rows: 1fr 1fr;
   font-size: 14px;
 }
@@ -139,8 +139,9 @@ pre {
 }
 
 .skills-sub-title {
-  margin:0;
+  margin: 0;
 }
+
 .time-period,
 .job-position {
   margin: 5px 0;
@@ -175,4 +176,9 @@ pre {
 
 .highlighted {
   color: #008cff;
+}
+
+.cv-link {
+  font-size: 14px;
+  font-weight: bold;
 }
